# executiveAI

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  render.yaml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/auth/: dependencies.py  security.py  service.py
backend/app/database/: session.py
backend/app/models/: __init__.py  blueprint.py  execution.py  project.py  reliability.py  user.py
backend/app/routes/: auth.py  blueprints.py  executions.py  projects.py  reliability.py
backend/app/schemas/: auth.py  blueprints.py  executions.py  projects.py  reliability.py
backend/app/services/ai/: gemini_service.py  llm_service.py
backend/app/services/execution/: workflow_engine.py
backend/app/services/memory/: memory_service.py
backend/app/services/reliability/: __init__.py  reliability_layer.py
backend/app/services/validation/: validator_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: toast.tsx
frontend/components/app-layout/: index.tsx
frontend/components/navbar/: index.tsx
frontend/components/project-card/: index.tsx
frontend/components/project-table/: index.tsx
frontend/components/sidebar/: index.tsx
frontend/config/: templates.ts
frontend/context/: AuthContext.tsx
frontend/hooks/: useAuth.ts
frontend/services/: api.ts
frontend/types/: index.ts
(+3 files in other folders)
