[tool.poetry]
name = "executiveai"
version = "0.1.0"
description = "ExecuteAI backend"
authors = ["tanya <tanya@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

# Backend dependencies (copied from your backend/requirements.txt)
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
aiosqlite = "^0.20.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
bcrypt = "^4.1.2"
python-multipart = "^0.0.9"
email-validator = "^2.1.1"
httpx = "^0.27.0"
langgraph = "^0.1.4"
asyncpg = "^0.31.0"          # <‑‑ needed for Neon PostgreSQL

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
